# mcp-study-materials

./: .env.example  .gitignore  API_REFERENCE.md  COMPLETION_REPORT.md  DEPLOYMENT.md  IMPLEMENTATION.md  PROJECT_MAP.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  REFACTORING_NOTES.md  main.py  mcp.example.json  pyproject.toml  requirements.txt  sample_usage.py  settings.py
models/: result.py  study_material_models.py
services/: document_processor.py  study_material_service.py
tests/: test_search.py  test_topic.py
tools/: study_material_tools.py
utils/: errors.py  paths.py  text_processing.py  validate.py
